// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Email Addresses Multiple Emails 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-7u2td5"
  >
    <a
      href="mailto:example@example.com"
    >
      example@example.com
    </a>
  </span>
  <span
    class="svelte-7u2td5"
  >
    <a
      href="mailto:email@email.com"
    >
      email@email.com
    </a>
  </span>
  <span
    class="svelte-7u2td5"
  >
    <a
      href="mailto:post@pigeon.com"
    >
      post@pigeon.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots Email Addresses Single Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <span
    class="svelte-7u2td5"
  >
    <a
      href="mailto:glean@mozilla.com"
    >
      glean@mozilla.com
    </a>
  </span>
  
</section>
`;

exports[`Storyshots Markdown Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  A 
  <em>
    text
  </em>
   in markdown 
  <a
    href="https://mozilla.org"
  >
    moz
  </a>
  .
  
</section>
`;
